--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <img src="img/grid1.png">
                 </div>
                 <div class="recent__grid__box__item__indi">
-                    <p class="feature__paragraph">
+                    <p class="feature__paragraph" id="wh">
                         Collaboratively leverage existing reliable services.
                 Professionally scale value-added "outside the box" thinking via premier methods of empowerment. Distinctively incentivize next-generation action items for out-of-the-box action items. Efficiently unleash backward-compatible collaboration and idea-sharing vis-a-vis functional benefits.    
                 Appropriately synergize market-driven meta-services and timely content.
@@ -68,7 +68,7 @@
                     <img src="img/grid2.png"> 
                 </div>
                 <div  class="recent__grid__box__item__indi">
-                    <p class="feature__paragraph">
+                    <p class="feature__paragraph" id="wh">
                         Collaboratively leverage existing reliable services.
                 Professionally scale value-added "outside the box" thinking via premier methods of empowerment. Distinctively incentivize next-generation action items for out-of-the-box action items. Efficiently unleash backward-compatible collaboration and idea-sharing vis-a-vis functional benefits.    
                 Appropriately synergize market-driven meta-services and timely content.
@@ -85,10 +85,10 @@
         </div>
         <div class="footer">
           <h3>Is there anything you want to discuss</h3>
-          <button>Contact me</button>
-          <div class="footer__in"><h4>Home</h4><h4>Posts</h4></div>
+          <button class="feature__button fmb">Contact me</button>
+          <div class="footer__in"><h4 class="fsp">Home</h4><h4>Posts</h4></div>
           <div class="footer__last">
-              <h3>&copy All rights reserved</h3>
+              <h3>&copy Hezeiah Oluwole Adeyemi Ministries. All rights reserved</h3>
           </div>
         </div>
        </section>
